deploy/k8s/front-end/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: mogambo
  labels:
    app: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: <AWS_ECR_REGISTRY_URL>/mogambo-front-end:<COMMIT_SHA>
          ports:
            - containerPort: 8079
          resources:
            requests:
              memory: "256Mi"      
              cpu: "100m"        
            limits:
              memory: "512Mi"      
              cpu: "300m"
