deploy/k8s/front-end/service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: mogambo
spec:
  type: ClusterIP
  selector:
    app: front-end
  ports:
    - port: 80
      targetPort: 8079
