deploy/k8s/front-end/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
  namespace: mogambo
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /catalogue/images
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
          - path: /catalogue
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 80
          - path: /carts
            pathType: Prefix
            backend:
              service:
                name: carts
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
